# tubes-2-ai-senku-intelligence

./: .dockerignore  .gitignore  Dockerfile  README.md  Tubes2_Notebook.ipynb  docker-compose.yml  main.py  pyproject.toml
data/processed/: X_test_kaggle.npy  X_train.npy  X_val.npy  scaler_mean.npy  scaler_std.npy  test_ids.npy  y_train.npy  y_val.npy
doc/: IMPROVEMENTS.md  WORKFLOW_EXPLANATION.md
src/: dtl_scratch.py  linear_models.py  preprocessing.py  svm_scratch.py  test_Saveload.py  test_dtl.py  test_logreg.py
